# policy-corpus

./: README.md
air_transport/: airplane_pollution_compliance.txt
basic/: miscellaneous.md
benchmark_your_policy_automation_docs/: README.md  prompt_template_benchmark_policyautomation.md  system_prompt_template.md  user_prompt_template.md
border-control/: border-goods-policy.txt
common/: abstract_policy.py  benchmarking_results.py  commons_descriptor.md  generic_data_generator.py  generic_tester.py  llm_calls.py  watson_utils.py
fraud-detection/: Cross-Border-Fraud-Detection-NL-Policy.txt  compact.txt  text-rules-for-card-fraud-detection-1.txt
human-resources/: acme_time_off.md  acme_time_off.py  acme_time_off.txt  acme_time_off_data_generator.py  acme_time_off_decisions_1000.csv  acme_time_off_requests_1000.csv  acme_time_off_runner.py
insect-classification/: insect-classification-policy.txt  simplified-insect-taxonomy.txt
insurance/: basic_eligibility_car_insurance.txt  insurance_policy.md  pyproject.toml
loan/: basic_loan_approval.json  basic_loan_approval_us.txt  loan_policy.md  pyproject.toml
loan/loan_compliance/: loan_data_generator.py  loan_policy.py  loan_policy_test_dataset_100.csv  loan_policy_test_dataset_1K.csv  loan_policytester.py  loan_request.py
loan/simple_loan/: simple_loan.txt  simple_loan_2.txt
luggage/: luggage_policy.md  luggage_policy.txt  pyproject.toml
nature/: mineral-classification.txt
policy_corpus_extension_docs/: README.md  data_generator_call_template.md  prompt_template_data_generator.md  tester_template.md  (+1 more)
(+22 files in other folders)
