[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loan_compliance"
version = "0.1.0"
#
#dependencies = [
#    # You can list your dependencies here
#    # "some-package>=1.0.0",
#]
requires-python = ">=3.7"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"*" = ["*"]
